Make minor adjustments to site Web page

--- a/OMSC4G.html
+++ b/OMSC4G.html
@@ -50,12 +50,12 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
 	            </td>
 	            <td>
 	            	<ul>
-	                	<li><a href="">On-boarding Quiz w/ ID verification (link unavailable)</a><br>
+	                	<li><a href="#">On-boarding Quiz w/ ID verification (link unavailable)</a>
 	                	<li>Getting started completion block
 	                </ul>
 	            </td>
 	            <td>
-	                <strong>Project Due:</strong> TBA
+	                <strong>Project Due:</strong> NA
 	            </td>
 	        </tr>
 	        <tr>
@@ -143,7 +143,6 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
 		                <li>Partner presentations
 		                <li>The role of technology
 		                <li>Brainstorm deliverables
-		                <li>Finding partners in your community
 	                </ul>
 	            </td>
 	            <td>
@@ -168,14 +167,11 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
 		            <ul>
 			            <li>The Role of Technology in Society
 			            <li>How to Evaluate
-			            <li>Brainstorm deliverables
-			            <li>Finding partners in your community
 		            </ul>
 	            </td>
 	            <td>
 	                <strong>Required Readings:</strong>
 	                <ul class="whead">
-	                	<li><a href="https://www.amazon.com/Geek-Heresy-Rescuing-Social-Technology/dp/161039528X" target="_blank">Geek Heresy: Rescuing Social Change from the Cult of Technology</a>
 	                </ul>
 	                <strong>Optional Suggested Readings:</strong>
 	                <ul class="whead">
