Fine-tune the mobile-first design of Web page

--- a/OMSC4G.html
+++ b/OMSC4G.html
@@ -5,12 +5,13 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
 <html>
 <head>
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 	<header>
 		<img src="gt-logo-gold-33percent.png" align="left">
 		<section class="bannertext">
-			<h3>C4G: Computing for Social Good: Fall 2021</h3>
+			<h3>Computing for Social Good (C4G) Fall 2021</h3>
 	        <h4>Instructor: Santosh Vempala, <a href="mailto:vempala@gatech.edu">vempala@gatech.edu</a></h4>
         </section>	
 	</header>
@@ -19,12 +20,15 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
         <p>
             <span class="initialtext">How can computing help</span> make the world a better place? Can we avoid wars, alleviate homelessness and improve global health using computers? What are the technical challenges that arise and what humanistic issues have to be taken into account and understood in the process? In this C4G course, we explore problems faced by developing countries and underserved populations from a computing perspective. The course will be project-centered with teams of students choosing project topics early in the semester and working towards a deployed solution by the end of the semester.
         </p>
+    </section>
+    <section>
         <h4>Course Description:</h4>
-        <h4>Learning Objectives:</h4>
+       	<h4>Learning Objectives:</h4>
         <h4>Prerequisites:</h4>
         <h4>Grading:</h4>
     </section><br>
-    
+ 
+ <!----------------- Schedule ---------------->   
     <h4>Schedule:</h4>
     <table class="styled-table">
     	<thead>
@@ -32,7 +36,8 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
 	            <th>Topic</th>
 	            <th>Learning Objectives</th>
 	            <th>Materials</th>
-	            <th>Assessments, Activities</th>
+	            <!--<th>Assessments, Activities</th>-->
+	            <th>Tasks, Projects</th>
 	        </tr>
         </thead>
         <tbody>
@@ -66,7 +71,7 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
 	                <ul>
 	                	<li>Introductions
 	                	<li>Course goals
-		                <li>Skills/Interests exercise
+		                <li>Skills-Interests exercise
 		               	<li>Team formation
 	                </ul>
 	            </td>
@@ -79,7 +84,7 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
 	                </ul>
 	            </td>
 	            <td>
-	                <strong>Project Due:</strong> Skills/Interests exercise
+	                <strong>Project Due:</strong> Skills-Interests exercise
 	            </td>
 	        </tr>
 	        <tr>
@@ -175,7 +180,7 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
 	                </ul>
 	                <strong>Optional Suggested Readings:</strong>
 	                <ul class="whead">
-	                	<li>Tapan Parikh/Neha Kumar
+	                	<li>Tapan Parikh, Neha Kumar
 	                </ul>
 	            </td>
 	            <td>
@@ -402,6 +407,7 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
         </tbody>
     </table><br>
 
+<!----------------- Assignments ---------------->
     <h4>Graded Assignments and Distribution:</h4>
     <table class="styled-table">
     	<thead>
