--- a/OMSC4G.html
+++ b/OMSC4G.html
@@ -4,8 +4,89 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="style.css">
+    <!--<link rel="stylesheet" href="style.css">-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+    	*{
+			margin: 0;
+			padding: 0;
+			box-sizing: border-box;
+		}
+		html{
+			color: #000;
+		    font-family: "Roboto", sans-serif;
+		    font-size: 16px;
+		}
+		body{	
+		    min-height: 100vh;
+		    padding: 1em 1em;
+		    width: 100%;
+		}
+		.initialtext{
+			font-size: 1.3em;
+		}
+		.bannertext{
+			position: relative;
+			padding-top: 3%;
+		}
+		hr{
+			color: #B3A369;
+			background-color: #B3A369;
+			height: 10px;
+			width: 100%;
+		}
+		section{
+			margin-top: 1em;
+		}
+		table, th, td{
+		    border:2px solid black;
+		    font-size: 0.9em;
+		    table-layout : fixed;
+		    width: 100%;
+		}
+		.styled-table {
+		    border-collapse: collapse;
+		    font-family: sans-serif;
+		    min-width: 375px;
+		    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+		    width: 100%;
+		}
+		.styled-table thead tr {
+		    background-color: #B3A369;
+		    color: #ffffff;
+		    text-align: left;
+		}
+		.styled-table th,
+		.styled-table td {
+		    padding: 0.5em 0.5em;
+		    vertical-align: top;
+		}
+		.styled-table tbody tr {
+		    border-bottom: 1px solid #dddddd;
+		}
+		
+		.styled-table tbody tr:nth-of-type(even) {
+		    background-color: #f3f3f3;
+		}
+		.styled-table tbody tr:last-of-type {
+		    border-bottom: 2px solid #009879;
+		}
+		.styled-table tbody tr.active-row {
+		    font-weight: bold;
+		    color: #009879;
+		}
+		ul{
+		  padding-left: 0.5em;
+		  margin-top: -0.03em;
+		}
+		.whead li{
+			margin-left: 0.5em;
+		}
+		li{
+		  padding-left: -1em;
+		  text-indent: -0.5em;
+		} 	
+    </style>
 </head>
 <body>
 	<header>
