Add Dante's contact info

--- a/OMSC4G.html
+++ b/OMSC4G.html
@@ -1,6 +1,12 @@
 <!-- Thanks to Dom from dcode for the table styling code:
 https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
 
+<!-- 
+NOTE: Internal style was used to facilitate viewing with the GitHub/BitBucket
+HTML preview tool. External stylesheets incur a 40 second delay in rendering with
+this tool.
+-->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -93,7 +99,8 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
 		<img src="gt-logo-gold-33percent.png" align="left">
 		<section class="bannertext">
 			<h3>Computing for Social Good (C4G) Fall 2021</h3>
-	        <h4>Instructor: Santosh Vempala, <a href="mailto:vempala@gatech.edu">vempala@gatech.edu</a></h4>
+	        <h4>Professor: Santosh Vempala, <a href="mailto:vempala@gatech.edu">vempala@gatech.edu</a></h4>
+	        <h5>Instructional Associate: Dante Ciolfi, <a href="mailto:dantec@gatech.edu">dantec@gatech.edu</a></h5>
         </section>	
 	</header>
 	<hr>
