Modify Web page: add course #; modify partners doc: add partners

--- a/OMSC4G.html
+++ b/OMSC4G.html
@@ -98,7 +98,7 @@ this tool.
 	<header>
 		<img src="gt-logo-gold-33percent.png" align="left">
 		<section class="bannertext">
-			<h3>Computing for Social Good (C4G) Fall 2021</h3>
+			<h3>CS6150 Fall 2021, Computing for Social Good</h3>
 	        <h4>Professor: Santosh Vempala, <a href="mailto:vempala@gatech.edu">vempala@gatech.edu</a></h4>
 	        <h5>Instructional Associate: Dante Ciolfi, <a href="mailto:dantec@gatech.edu">dantec@gatech.edu</a></h5>
         </section>	
