Add images, papers folders; modify potential_partners.docx, todo.txt

--- a/OMSC4G.html
+++ b/OMSC4G.html
@@ -589,8 +589,22 @@ this tool.
     <section>
         <h4>References:</h4>
         Text: <a href="https://www.amazon.com/Geek-Heresy-Rescuing-Social-Technology/dp/161039528X" target="_blank">Geek Heresy: Rescuing Social Change from the Cult of Technology</a><br>
+        Talks: <a href="http://kentarotoyama.org/talks/2010%2006%2023%20Ten%20Myths%20of%20ICT4D%20-%20Toyama.ppt">10 Myths of ICT4D (clicking downloads PPTX)</a><br>
         Papers:
-        <a href="https://dl.acm.org/doi/pdf/10.1145/2909609.2909657" target="_blank">The C4G BLIS experience</a>, <a href="https://smartech.gatech.edu/bitstream/handle/1853/48574/Sustainability%20Failures%20of%20Rural%20Telecenters%20Challenges%20from%20the%20Sustainable%20Access%20in%20Rural%20India%20%28SARI%29%20Project.pdf?sequence=1&isAllowed=y" target="_blank">The SARI project</a>
+        <a href="https://ieeexplore.ieee.org/abstract/document/5426674">Design and deployment of a blood safety monitoring tool (PDF requires GT account sign-in)</a>, 
+        <a href="https://dl.acm.org/doi/pdf/10.1145/2909609.2909657" target="_blank">The C4G BLIS experience</a>, 
+        <a href="https://smartech.gatech.edu/bitstream/handle/1853/48574/Sustainability%20Failures%20of%20Rural%20Telecenters%20Challenges%20from%20the%20Sustainable%20Access%20in%20Rural%20India%20%28SARI%29%20Project.pdf?sequence=1&isAllowed=y" target="_blank">The SARI project</a>
+        <!--<br><br>
+        <footnote><h5>* GT Proxy Tool Setup</h5></footnote>
+        <small>
+        	Log in to GT account<br>
+			Create new browser bookmark with URL below and name it, e.g., "GT Proxy Link":<br>
+			&nbsp;&nbsp;&nbsp;&nbsp;javascript:void(location.href='https://go.openathens.net/redirector/gatech.edu?url='+location.href)<br>
+			While on web page with research paper's PDF link, click GT Proxy link bookmark<br>
+			GT Access confirmation appears at top of page<br>
+			Click PDF link to get access to full PDF<br>
+			<img src="images/proxy_conf_18percent.png">
+		</small>-->		
     </section>
 </body>
 </html>
