Add grading section

--- a/OMSC4G.html
+++ b/OMSC4G.html
@@ -85,6 +85,15 @@ this tool.
 		  padding-left: 0.5em;
 		  margin-top: -0.03em;
 		}
+		.grading ul, li{
+			padding-left: 1.0em;
+		}
+		/*.gradingproject li{
+			text-indent: -0.5em;
+		}*/
+		.grades ul, li{
+			padding-left: 1.0em;
+		}
 		.whead li{
 			margin-left: 0.5em;
 		}
@@ -113,7 +122,23 @@ this tool.
         <h4>Course Description:</h4>
        	<h4>Learning Objectives:</h4>
         <h4>Prerequisites:</h4>
-        <h4>Grading:</h4>
+        
+        <section class="grading">
+        <h4>Grading - please see <a href="#">Rubric Document (available soon)</a></h4>
+        <ul class="grades">
+        	<li><span style="position:relative;left:-0.5em">Project: 50% (reflection papers)</span>
+        		<ul>
+		        	<li>Milepost 1 - 10%</li>
+		        	<li>Milepost 2 - 10%</li>
+		        	<li>Milepost 3 - 10%</li>
+		        	<li>Project Deliverable Presentation - 20%</li>
+        		</ul>
+        	</li>
+	        <li>MidTerm Exam: 20% - All readings/material from 1st half of course</li>
+	        <li>Final Exam: 20% - All readings/material from 2nd half of course</li>
+	        <li>Participation: 10%</li>
+		</ul>
+		</section>
     </section><br>
  
  <!----------------- Schedule ---------------->   
@@ -587,7 +612,7 @@ this tool.
     </table><br>
     
     <section>
-        <h4>References:</h4>
+        <h4>Course Resources:</h4>
         Text: <a href="https://www.amazon.com/Geek-Heresy-Rescuing-Social-Technology/dp/161039528X" target="_blank">Geek Heresy: Rescuing Social Change from the Cult of Technology</a><br>
         <!--Talks: <a href="http://kentarotoyama.org/talks/2010%2006%2023%20Ten%20Myths%20of%20ICT4D%20-%20Toyama.ppt">10 Myths of ICT4D (right-click to save PPTX; disregard warning)</a><br>-->
         Talks: <a href="slides/myths_ict4d.ppt">10 Myths of ICT4D (clicking downloads PPT)</a><br>
