Adjust path to GT image in OMSC4G.html

--- a/OMSC4G.html
+++ b/OMSC4G.html
@@ -105,7 +105,7 @@ this tool.
 </head>
 <body>
 	<header>
-		<img src="gt-logo-gold-33percent.png" align="left">
+		<img src="images/gt-logo-gold-33percent.png" align="left">
 		<section class="bannertext">
 			<h3>CS6150 Fall 2021, Computing for Social Good</h3>
 	        <h4>Professor: Santosh Vempala, <a href="mailto:vempala@gatech.edu">vempala@gatech.edu</a></h4>
