Modify OMSC4G; add partnering.html (for partners/potential partners to understand our process)

--- a/OMSC4G.html
+++ b/OMSC4G.html
@@ -1,7 +1,8 @@
-<!-- Thanks to Dom from dcode for the table styling code:
-https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
+<!---------------- BEGIN Page Template --------------->
 
-<!-- 
+<!-- Thanks to Dom from dcode for the table styling code:
+https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l 
+
 NOTE: Internal style was used to facilitate viewing with the GitHub/BitBucket
 HTML preview tool. External stylesheets incur a 40 second delay in rendering with
 this tool.
@@ -113,7 +114,10 @@ this tool.
         </section>	
 	</header>
 	<hr>
+<!---------------- END Page Template --------------->
+
     <section>
+    	<h3>Welcome to C4G</h3>
         <p>
             <span class="initialtext">How can computing help</span> make the world a better place? Can we avoid wars, alleviate homelessness and improve global health using computers? What are the technical challenges that arise and what humanistic issues have to be taken into account and understood in the process? In this C4G course, we explore problems faced by developing countries and underserved populations from a computing perspective. The course will be project-centered with teams of students choosing project topics early in the semester and working towards a deployed solution by the end of the semester.
         </p>
