Modify Toyama URL again

--- a/toyama.html
+++ b/toyama.html
@@ -195,6 +195,6 @@ this tool.
     	<h3>Kentaro Toyama PowerPoint - The Myths of ICT4D</h3>
     </section>
     <!--<iframe src='https://view.officeapps.live.com/op/embed.aspx?src=[https://www.https://htmlpreview.github.io/?https://raw.githubusercontent.com/santoshv/C4G/slides/myths_ict4d.ppt]' width='100%' height='600px' frameborder='0'>-->
-    <iframe src="https://www.https://htmlpreview.github.io/?https://raw.githubusercontent.com/santoshv/C4G/slides/myths_ict4d.ppt" width='100%' height='600px' frameborder='0'> 
+    <iframe src="https://gtvault-my.sharepoint.com/:p:/g/personal/dciolfi3_gatech_edu/EUH4Nw5r17FLjXaftZouJAsByBHpZfr7ib-H91Z9HxJgtA" width='100%' height='600px' frameborder='0'> 
 </body>
 </html>
