--- a/toyama.html
+++ b/toyama.html
@@ -195,6 +195,6 @@ this tool.
     	<h3>Kentaro Toyama PowerPoint - The Myths of ICT4D</h3>
     </section>
     <!--<iframe src='https://view.officeapps.live.com/op/embed.aspx?src=[https://www.https://htmlpreview.github.io/?https://raw.githubusercontent.com/santoshv/C4G/slides/myths_ict4d.ppt]' width='100%' height='600px' frameborder='0'>-->
-    <iframe src="https://gtvault-my.sharepoint.com/:p:/r/personal/dciolfi3_gatech_edu/_layouts/15/Doc.aspx?sourcedoc=%7B0E37F841-D76B-4BB1-8D76-9FB59A2E240B%7D&file=myths_ict4d.ppt&action=edit&mobileredirect=true" width='100%' height='600px' frameborder='0'> 
+    <iframe src="https://gtvault-my.sharepoint.com/personal/dciolfi3_gatech_edu/_layouts/15/Doc.aspx?sourcedoc={0e37f841-d76b-4bb1-8d76-9fb59a2e240b}&amp;action=embedview&amp;wdAr=1.3333333333333333" width="350px" height="286px" frameborder="0"></iframe> 
 </body>
 </html>
