--- a/toyama.html
+++ b/toyama.html
@@ -195,6 +195,6 @@ this tool.
     	<h3>Kentaro Toyama PowerPoint - The Myths of ICT4D</h3>
     </section>
     <!--<iframe src='https://view.officeapps.live.com/op/embed.aspx?src=[https://www.https://htmlpreview.github.io/?https://raw.githubusercontent.com/santoshv/C4G/slides/myths_ict4d.ppt]' width='100%' height='600px' frameborder='0'>-->
-    <iframe src="https://gtvault-my.sharepoint.com/personal/dciolfi3_gatech_edu/_layouts/15/Doc.aspx?sourcedoc={0e37f841-d76b-4bb1-8d76-9fb59a2e240b}&amp;action=embedview&amp;wdAr=1.3333333333333333" width="350px" height="286px" frameborder="0"></iframe> 
+    <iframe src="https://gtvault-my.sharepoint.com/personal/dciolfi3_gatech_edu/_layouts/15/Doc.aspx?sourcedoc={3650eefd-5077-4262-97da-ea2daef81ba1}&amp;action=embedview&amp;wdAr=1.3333333333333333" width="350px" height="286px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
 </body>
 </html>
