Modify Toyama URL again; reset permissions

--- a/toyama.html
+++ b/toyama.html
@@ -194,7 +194,7 @@ this tool.
     <section>
     	<h3>Kentaro Toyama PowerPoint - The Myths of ICT4D</h3>
     </section>
-    <!--<iframe src='https://view.officeapps.live.com/op/embed.aspx?src=[https://www.https://htmlpreview.github.io/?https://raw.githubusercontent.com/santoshv/C4G/slides/myths_ict4d.ppt]' width='100%' height='600px' frameborder='0'>-->
-    <iframe src="https://gtvault-my.sharepoint.com/personal/dciolfi3_gatech_edu/_layouts/15/Doc.aspx?sourcedoc={3650eefd-5077-4262-97da-ea2daef81ba1}&amp;action=embedview&amp;wdAr=1.3333333333333333" width="350px" height="286px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
+    <!--<iframe src='https://view.officeapps.live.com/op/embed.aspx?src=[https://www.https://htmlpreview.github.io/?https://raw.githubusercontent.com/santoshv/C4G/slides/myths_ict4d.ppt]' width='100%' height='600px' frameborder='0'>-->   
+    <iframe src="https://gtvault-my.sharepoint.com/:p:/g/personal/dciolfi3_gatech_edu/Ef3uUDZ3UGJCl9rqLa74G6EByoXRTVSsljBuzL4kvKFieg?e=xYcHoQ" width="350px" height="286px" frameborder="0"></iframe>
 </body>
 </html>
