--- a/toyama.html
+++ b/toyama.html
@@ -196,8 +196,8 @@ this tool.
     </section>
     <!--<iframe src='https://view.officeapps.live.com/op/embed.aspx?src=[https://www.https://htmlpreview.github.io/?https://raw.githubusercontent.com/santoshv/C4G/slides/myths_ict4d.ppt]' width='100%' height='600px' frameborder='0'>--> 
     <!-- PPTX -->
-    <iframe src="https://gtvault-my.sharepoint.com/:p:/g/personal/dciolfi3_gatech_edu/Ef3uUDZ3UGJCl9rqLa74G6EByoXRTVSsljBuzL4kvKFieg" width="350px" height="286px" frameborder="0"></iframe>
-    <!-- PDF -->
-    <iframe src="https://gtvault-my.sharepoint.com/personal/dciolfi3_gatech_edu/Documents/myths_ict4d.pdf" width="350px" height="286px" frameborder="0"></iframe>
+    <!-- Use PowerPoint for the Web code to embed, including 
+    "This is an embedded...", etc. -->
+    <iframe src="https://gtvault-my.sharepoint.com/personal/dciolfi3_gatech_edu/_layouts/15/Doc.aspx?sourcedoc={3650eefd-5077-4262-97da-ea2daef81ba1}&amp;action=embedview&amp;wdAr=1.3333333333333333" width="350px" height="286px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe> 
 </body>
 </html>
