--- a/toyama.html
+++ b/toyama.html
@@ -198,6 +198,9 @@ this tool.
     <!-- PPTX -->
     <!-- Use PowerPoint for the Web code to embed, including 
     "This is an embedded...", etc. -->
+    GT OneDrive
     <iframe src="https://gtvault-my.sharepoint.com/personal/dciolfi3_gatech_edu/_layouts/15/Doc.aspx?sourcedoc={3650eefd-5077-4262-97da-ea2daef81ba1}&amp;action=embedview&amp;wdAr=1.3333333333333333" width="350px" height="286px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe> 
+    Dante OneDrive
+    <iframe src="https://onedrive.live.com/embed?resid=7DBA407A6E7CD332%211405&amp;authkey=%21AEz7Et3sPBdmnto&amp;em=2&amp;wdAr=1.3333333333333333" width="350px" height="286px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
 </body>
 </html>
