--- a/toyama.html
+++ b/toyama.html
@@ -192,15 +192,16 @@ this tool.
 <!---------------- END Page Template --------------->
 
     <section>
-    	<h3>Kentaro Toyama PowerPoint - The Myths of ICT4D</h3>
+    	<h3>
+    		Kentaro Toyama PowerPoint - The Myths of ICT4D <span style="color:red">(NOTE: development version on Dante's OneDrive)</span>
+    	</h3>
     </section>
     <!--<iframe src='https://view.officeapps.live.com/op/embed.aspx?src=[https://www.https://htmlpreview.github.io/?https://raw.githubusercontent.com/santoshv/C4G/slides/myths_ict4d.ppt]' width='100%' height='600px' frameborder='0'>--> 
     <!-- PPTX -->
     <!-- Use PowerPoint for the Web code to embed, including 
     "This is an embedded...", etc. -->
-    GT OneDrive
-    <iframe src="https://gtvault-my.sharepoint.com/personal/dciolfi3_gatech_edu/_layouts/15/Doc.aspx?sourcedoc={3650eefd-5077-4262-97da-ea2daef81ba1}&amp;action=embedview&amp;wdAr=1.3333333333333333" width="350px" height="286px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe> 
-    Dante OneDrive
+    <!-- GT OneDrive version GT permissions issue
+    <iframe src="https://gtvault-my.sharepoint.com/personal/dciolfi3_gatech_edu/_layouts/15/Doc.aspx?sourcedoc={3650eefd-5077-4262-97da-ea2daef81ba1}&amp;action=embedview&amp;wdAr=1.3333333333333333" width="350px" height="286px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>--> 
     <iframe src="https://onedrive.live.com/embed?resid=7DBA407A6E7CD332%211405&amp;authkey=%21AEz7Et3sPBdmnto&amp;em=2&amp;wdAr=1.3333333333333333" width="350px" height="286px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
 </body>
 </html>
