--- a/OMSC4G.html
+++ b/OMSC4G.html
@@ -693,7 +693,7 @@ this tool.
         <h4>Course Resources:</h4>
         Text: <a href="https://www.amazon.com/Geek-Heresy-Rescuing-Social-Technology/dp/161039528X" target="_blank">Geek Heresy: Rescuing Social Change from the Cult of Technology</a><br>
         <!--Talks: <a href="http://kentarotoyama.org/talks/2010%2006%2023%20Ten%20Myths%20of%20ICT4D%20-%20Toyama.ppt">10 Myths of ICT4D (right-click to save PPTX; disregard warning)</a><br>-->
-        <!--Talks: <a href="slides/myths_ict4d.ppt">10 Myths of ICT4D (clicking downloads PPT)</a><br>-->
+        <!--Talks: <a href="slides/myths_ict4d.ppt">10 Myths of ICT4D</a><br>-->
         Talks: <a href="toyama.html">10 Myths of ICT4D</a><br>
         Papers:
         <a href="https://ieeexplore.ieee.org/abstract/document/5426674">Design and deployment of a blood safety monitoring tool (PDF requires GT account sign-in)</a>, 
