--- a/toyama.html
+++ b/toyama.html
@@ -177,10 +177,11 @@ this tool.
         
         <!-------------  Top menu HTML----------------->
 		<div class="topnav" id="myTopnav">
-			<a href="OMSC4G.html" class="active">Home</a>
+			<a href="OMSC4G.html">Home</a>
 			<a href="assignments.docx">Assignments</a>
 			<a href="#prevproj.html">PreviousProjects</a>
 			<a href="#partnering.html">Partnering</a>	
+			<a href="toyama.html" class="active">Toyama</a>
 			<a href="javascript:void(0);" class="icon" onclick="responseMenu()">
 				<i class="fa fa-bars"></i>
 			</a>
