Modify OMSC4G.html, partnering.html

--- a/OMSC4G.html
+++ b/OMSC4G.html
@@ -180,7 +180,7 @@ this tool.
 			<a href="OMSC4G.html" class="active">Home</a>
 			<a href="assignments.docx">Assignments</a>
 			<a href="#prevproj.html">PreviousProjects</a>
-			<a href="#partnering.html">Partnering</a>	
+			<a href="partnering.html">Partnering</a>	
 			<a href="javascript:void(0);" class="icon" onclick="responseMenu()">
 				<i class="fa fa-bars"></i>
 			</a>
