--- a/partnering.html
+++ b/partnering.html
@@ -172,7 +172,7 @@ this tool.
 		<section class="bannertext">
 			<h3>CS6150 Fall 2021, Computing for Social Good</h3>
 	        <h4>Professor: Santosh Vempala, <a href="mailto:vempala@gatech.edu">vempala@gatech.edu</a></h4>
-	        <h5>Instructional Associate: Dante Ciolfi, <a href="mailto:dantec@gatech.edu">dantec@gatech.edu</a></h5>
+	        <h5 style="margin-bottom:0.5em">Instructional Associate: Dante Ciolfi, <a href="mailto:dantec@gatech.edu">dantec@gatech.edu</a></h5>
         </section>
         	
         <!-------------  Top menu HTML----------------->
