Modify partnering.html, toyama.html

--- a/partnering.html
+++ b/partnering.html
@@ -168,7 +168,9 @@ this tool.
 </head>
 <body>
 	<header>
-		<img src="images/gt-logo-gold-33percent.png" align="left">
+		<a href="OMSC4G.html">
+			<img src="images/gt-logo-gold-33percent.png" align="left">
+		</a>
 		<section class="bannertext">
 			<h3>CS6150 Fall 2021, Computing for Social Good</h3>
 	        <h4>Professor: Santosh Vempala, <a href="mailto:vempala@gatech.edu">vempala@gatech.edu</a></h4>
