--- a/toyama.html
+++ b/toyama.html
@@ -168,7 +168,9 @@ this tool.
 </head>
 <body>
 	<header>
-		<img src="images/gt-logo-gold-33percent.png" align="left">
+		<a href="OMSC4G.html">
+			<img src="images/gt-logo-gold-33percent.png" align="left">
+		</a>
 		<section class="bannertext">
 			<h3>CS6150 Fall 2021, Computing for Social Good</h3>
 	        <h4>Professor: Santosh Vempala, <a href="mailto:vempala@gatech.edu">vempala@gatech.edu</a></h4>
@@ -192,8 +194,8 @@ this tool.
 <!---------------- END Page Template --------------->
 
     <section>
-    	<h3>
-    		Kentaro Toyama PowerPoint - The Myths of ICT4D <span style="color:red">(NOTE: development version on Dante's OneDrive)</span>
+    	<h3 style="display:inline">
+    		Kentaro Toyama PowerPoint - The Myths of ICT4D <span style="color:red;font-size:0.8em">(NOTE: this PPTX is hosted on Dante's OneDrive)</span>
     	</h3>
     </section>
     <!--<iframe src='https://view.officeapps.live.com/op/embed.aspx?src=[https://www.https://htmlpreview.github.io/?https://raw.githubusercontent.com/santoshv/C4G/slides/myths_ict4d.ppt]' width='100%' height='600px' frameborder='0'>--> 
