--- a/partnering.html
+++ b/partnering.html
@@ -168,7 +168,7 @@ this tool.
 </head>
 <body>
 	<header>
-		<a href="OMSC4G.html">
+		<a href="OMSC4G.html" style="border:3px">
 			<img src="images/gt-logo-gold-33percent.png" align="left">
 		</a>
 		<section class="bannertext">
