--- a/partnering.html
+++ b/partnering.html
@@ -1,7 +1,7 @@
 <!---------------- BEGIN Page Template --------------->
 
-<!-- Thanks to Dom from dcode for the table styling code:
-https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l 
+<!-- 
+Responsive nav menu: thanks to w3schools.com 
 
 NOTE: Internal style was used to facilitate viewing with the GitHub/BitBucket
 HTML preview tool. External stylesheets incur a 40 second delay in rendering with
@@ -167,26 +167,24 @@ this tool.
     </style>
 </head>
 <body>
-	<header>
-		<a href="OMSC4G.html" style="border:3px solid red">
-			<img src="images/gt-logo-gold-33percent.png" align="left">
-		</a>
+	<header style="margin-top:-1.0em;padding:0">
+		<img src="images/gt-logo-gold-33percent.png" align="left" style="position:relative;top:1.0em">
 		<section class="bannertext">
 			<h3>CS6150 Fall 2021, Computing for Social Good</h3>
 	        <h4>Professor: Santosh Vempala, <a href="mailto:vempala@gatech.edu">vempala@gatech.edu</a></h4>
 	        <h5 style="margin-bottom:0.5em">Instructional Associate: Dante Ciolfi, <a href="mailto:dantec@gatech.edu">dantec@gatech.edu</a></h5>
         </section>
-        	
+        
         <!-------------  Top menu HTML----------------->
 		<div class="topnav" id="myTopnav">
 			<a href="OMSC4G.html">Home</a>
 			<a href="assignments.docx">Assignments</a>
-			<a href="#prevproj.html">PreviousProjects</a>
-			<a href="partnering.html"  class="active">Partnering</a>	
+			<a href="#studentprojects.html">StudentProjects</a>
+			<a href="partnering.html" class="active">Partnering</a>	
 			<a href="javascript:void(0);" class="icon" onclick="responseMenu()">
 				<i class="fa fa-bars"></i>
 			</a>
-		</div>
+		</div>      
 	</header>
 	<hr>
 <!---------------- END Page Template --------------->
