--- a/toyama.html
+++ b/toyama.html
@@ -167,10 +167,8 @@ this tool.
     </style>
 </head>
 <body>
-	<header>
-		<a href="OMSC4G.html">
-			<img src="images/gt-logo-gold-33percent.png" align="left">
-		</a>
+	<header style="margin-top:-1.0em;padding:0">
+		<img src="images/gt-logo-gold-33percent.png" align="left" style="position:relative;top:1.0em">
 		<section class="bannertext">
 			<h3>CS6150 Fall 2021, Computing for Social Good</h3>
 	        <h4>Professor: Santosh Vempala, <a href="mailto:vempala@gatech.edu">vempala@gatech.edu</a></h4>
@@ -181,14 +179,13 @@ this tool.
 		<div class="topnav" id="myTopnav">
 			<a href="OMSC4G.html">Home</a>
 			<a href="assignments.docx">Assignments</a>
-			<a href="#prevproj.html">PreviousProjects</a>
+			<a href="#studentprojects.html">StudentProjects</a>
 			<a href="partnering.html">Partnering</a>	
-			<a href="toyama.html" class="active">Toyama</a>
+			<a href="toyama.html" class="active">ToyamaSlides</a>
 			<a href="javascript:void(0);" class="icon" onclick="responseMenu()">
 				<i class="fa fa-bars"></i>
 			</a>
-		</div>
-        
+		</div>      
 	</header>
 	<hr>
 <!---------------- END Page Template --------------->
