--- a/studentprojects.html
+++ b/studentprojects.html
@@ -179,8 +179,8 @@ this tool.
 		<div class="topnav" id="myTopnav">
 			<a href="OMSC4G.html">Home</a>
 			<a href="assignments.docx">Assignments</a>
-			<a href="studentprojects.html">StudentProjects</a>
-			<a href="partnering.html" class="active">Partnering</a>	
+			<a href="studentprojects.html" class="active">StudentProjects</a>
+			<a href="partnering.html">Partnering</a>	
 			<a href="javascript:void(0);" class="icon" onclick="responseMenu()">
 				<i class="fa fa-bars"></i>
 			</a>
@@ -189,25 +189,8 @@ this tool.
 	<hr>
 <!---------------- END Page Template --------------->
 
-	<section>
-    	<h3>Partnering With C4G</h3>
-        <p>
-            <span class="initialtext">Here</span> you'll find information for partners and potential partners regarding how partnering works. After reading this information, if you have further questions, please feel free to contact us via the email information in the page heading.
-        </p>
+    <section>
+    	<h3>C4G Student Projects</h3>
     </section>
-    
-    <!-------------- Script for nav menu -------------->
-    <script>
-		function responseMenu() {
-			var x = document.getElementById("myTopnav");
-			if (x.className === "topnav") {
-				x.className += " responsive";
-			} 
-			else {
-				x.className = "topnav";
-			}
-		}
-	</script>
 </body>
 </html>
-    
