--- a/OMSC4G.html
+++ b/OMSC4G.html
@@ -179,7 +179,7 @@ this tool.
 		<div class="topnav" id="myTopnav">
 			<a href="OMSC4G.html" class="active">Home</a>
 			<a href="assignments.docx">Assignments</a>
-			<a href="#studentprojects.html">StudentProjects</a>
+			<a href="studentprojects.html">StudentProjects</a>
 			<a href="partnering.html">Partnering</a>	
 			<a href="javascript:void(0);" class="icon" onclick="responseMenu()">
 				<i class="fa fa-bars"></i>
