--- a/studentprojects.html
+++ b/studentprojects.html
@@ -191,6 +191,21 @@ this tool.
 
     <section>
     	<h3>C4G Student Projects</h3>
+    	<p>
+            <span class="initialtext">Student projects will soon be available on this page.</span> Our course launches in Fall 2021, so please stay tuned...
     </section>
+    
+    <!-------------- Script for nav menu -------------->
+    <script>
+		function responseMenu() {
+			var x = document.getElementById("myTopnav");
+			if (x.className === "topnav") {
+				x.className += " responsive";
+			} 
+			else {
+				x.className = "topnav";
+			}
+		}
+	</script>
 </body>
 </html>
