--- a/toyama.html
+++ b/toyama.html
@@ -178,10 +178,10 @@ this tool.
         <!-------------  Top menu HTML----------------->
 		<div class="topnav" id="myTopnav">
 			<a href="OMSC4G.html">Home</a>
-			<a href="assignments.docx">Assignments</a>
-			<a href="studentprojects.html">StudentProjects</a>
+			<a href="studentprojects.html">Projects</a>
 			<a href="partnering.html">Partnering</a>	
 			<a href="toyama.html" class="active">ToyamaSlides</a>
+			<a href="https://gatech.instructure.com/courses/221674">CourseLogin</a>
 			<a href="javascript:void(0);" class="icon" onclick="responseMenu()">
 				<i class="fa fa-bars"></i>
 			</a>
