Modify menu: (CourseLogin): open in new tab

--- a/studentprojects.html
+++ b/studentprojects.html
@@ -180,7 +180,7 @@ this tool.
 			<a href="OMSC4G.html">Home</a>
 			<a href="studentprojects.html" class="active">Projects</a>
 			<a href="partnering.html">Partnering</a>
-			<a href="https://gatech.instructure.com/courses/221674">CourseLogin</a>	
+			<a href="https://gatech.instructure.com/courses/221674" target="_blank">CourseLogin</a>	
 			<a href="javascript:void(0);" class="icon" onclick="responseMenu()">
 				<i class="fa fa-bars"></i>
 			</a>
