--- a/toyama.html
+++ b/toyama.html
@@ -181,7 +181,7 @@ this tool.
 			<a href="studentprojects.html">Projects</a>
 			<a href="partnering.html">Partnering</a>	
 			<a href="toyama.html" class="active">ToyamaSlides</a>
-			<a href="https://gatech.instructure.com/courses/221674">CourseLogin</a>
+			<a href="https://gatech.instructure.com/courses/221674"  target="_blank">CourseLogin</a>
 			<a href="javascript:void(0);" class="icon" onclick="responseMenu()">
 				<i class="fa fa-bars"></i>
 			</a>
