Modify partnering.html again

--- a/partnering.html
+++ b/partnering.html
@@ -191,9 +191,9 @@ this tool.
 
 	<section>
     	<h3>Partnering With C4G</h3>
-    	<p><a href="https://c4g.wufoo.com/forms/z2uyoy60k1vto7/" target="_blank">Organization Project Wish List Form</a></p>
+    	<p><a href="https://c4g.wufoo.com/forms/z2uyoy60k1vto7/" target="_blank">Organization Project Wish List</a></p>
         <p>
-            <span class="initialtext">Here</span> you'll find information for partners and potential partners regarding how partnering works. After reading this information, if you have further questions, please feel free to contact us via the email information in the page heading. Additionally, please feel free to complete the Organization Project Wish List form (through our partner Wufoo) at the link above. In the form, please indicate the free software development projects you would like our students to complete for you. We will contact you within 1-2 business days. Thank you for your interest!
+            <span class="initialtext">Here</span> you'll find information for partners and potential partners regarding how partnering works. After reading this information, if you have further questions, please feel free to contact us via the email information in the page heading. Additionally, please feel free to complete the Organization Project Wish List (through our partner Wufoo) at the link above. In the form, please indicate the free software development projects you would like our students to complete for you. We will contact you within 1-2 business days. Thank you for your interest!
         </p>
     </section>
     
