Change wish list form

--- a/partnering.html
+++ b/partnering.html
@@ -189,14 +189,16 @@ this tool.
 	<hr>
 <!---------------- END Page Template --------------->
 
-	<section>
+	<div>
     	<h3>Partnering With C4G</h3>
     	<p style="color:red;font-weight:700">UNDER CONSTRUCTION</p><br>
     	<p><a href="https://c4g.wufoo.com/forms/z2uyoy60k1vto7/" target="_blank">Organization Project Wish List</a></p>
         <p>
             <span class="initialtext">Here</span> you'll find information for partners and potential partners regarding how partnering works. After reading this information, if you have further questions, please feel free to contact us via the email information in the page heading. Additionally, please feel free to complete the Organization Project Wish List (through our partner Wufoo) at the link above. In the form, please indicate the free software development projects you would like our students to complete for you. We will contact you within 1-2 business days. Thank you for your interest!
         </p>
-    </section>
+    </div>
+    <div id="wufoo-z2uyoy60k1vto7"> Fill out my <a href="https://c4g.wufoo.com/forms/z2uyoy60k1vto7">online form</a>. </div> <script type="text/javascript"> var z2uyoy60k1vto7; (function(d, t) { var s = d.createElement(t), options = { 'userName':'c4g', 'formHash':'z2uyoy60k1vto7', 'autoResize':true, 'height':'619', 'async':true, 'host':'wufoo.com', 'header':'show', 'ssl':true }; s.src = ('https:' == d.location.protocol ?'https://':'http://') + 'secure.wufoo.com/scripts/embed/form.js'; s.onload = s.onreadystatechange = function() { var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return; try { z2uyoy60k1vto7 = new WufooForm(); z2uyoy60k1vto7.initialize(options); z2uyoy60k1vto7.display(); } catch (e) { } }; var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr); })(document, 'script'); </script>
+    </div>
     
     <!-------------- Script for nav menu -------------->
     <script>
