--- a/OMSC4G.html
+++ b/OMSC4G.html
@@ -9,7 +9,7 @@ this tool.
 -->
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <!--<link rel="stylesheet" href="style.css">-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
