--- a/OMSC4G.html
+++ b/OMSC4G.html
@@ -11,6 +11,7 @@ this tool.
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<title>OMSC4G</title>
     <!--<link rel="stylesheet" href="style.css">-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
