--- a/OMSC4G.html
+++ b/OMSC4G.html
@@ -296,7 +296,7 @@ this tool.
 	                </ul>
 	                <strong>Optional Suggested Readings:</strong>
 	                <ul class="whead"> 
-	                	<li>The <a href="https://dl.acm.org/doi/pdf/10.1145/2909609.2909657" target="_blank">C4G BLIS experience</a>
+	                	<li>The <a href="https://dl.acm.org/doi/pdf/10.1145/2909609.2909657" title="warning:click opens new tab" target="_blank">C4G BLIS experience</a>
 		                <li>CDC Global Health
 		                <li>Cathy Rice?
 		            </ul>
@@ -344,7 +344,7 @@ this tool.
 	            <td>
 	                <strong>Required Readings:</strong>
 	                <ul class="whead">               
-	                	<li><a href="https://www.amazon.com/Geek-Heresy-Rescuing-Social-Technology/dp/161039528X" target="_blank">Geek Heresy: Rescuing Social Change from the Cult of Technology</a>
+	                	<li><a href="https://www.amazon.com/Geek-Heresy-Rescuing-Social-Technology/dp/161039528X" title="Warning:click opens new tab" target="_blank">Geek Heresy: Rescuing Social Change from the Cult of Technology</a>
 	                </ul>
 	                <strong>Optional Suggested Readings:</strong>
 	                <ul class="whead"> 
@@ -522,7 +522,7 @@ this tool.
 	            <td>
 	                <strong>Required Readings:</strong>
 	                <ul class="whead">
-	                	<li><a href="https://smartech.gatech.edu/bitstream/handle/1853/48574/Sustainability Failures of Rural Telecenters Challenges from the Sustainable Access in Rural India %28SARI%29 Project.pdf?sequence=1&isAllowed=y" target="_blank">The SARI project</a>
+	                	<li><a href="https://smartech.gatech.edu/bitstream/handle/1853/48574/Sustainability Failures of Rural Telecenters Challenges from the Sustainable Access in Rural India %28SARI%29 Project.pdf?sequence=1&isAllowed=y" title="Warning:click opens new tab" target="_blank">The SARI project</a>
 	                </ul>
 	                <strong>Optional Suggested Readings:</strong>
 	                <ul class="whead">
@@ -691,14 +691,14 @@ this tool.
     
     <section>
         <h4>Course Resources:</h4>
-        Text: <a href="https://www.amazon.com/Geek-Heresy-Rescuing-Social-Technology/dp/161039528X" target="_blank">Geek Heresy: Rescuing Social Change from the Cult of Technology</a><br>
+        Text: <a href="https://www.amazon.com/Geek-Heresy-Rescuing-Social-Technology/dp/161039528X" title="Warning:click opens new tab" target="_blank">Geek Heresy: Rescuing Social Change from the Cult of Technology</a><br>
         <!--Talks: <a href="http://kentarotoyama.org/talks/2010%2006%2023%20Ten%20Myths%20of%20ICT4D%20-%20Toyama.ppt">10 Myths of ICT4D (right-click to save PPTX; disregard warning)</a><br>-->
         <!--Talks: <a href="slides/myths_ict4d.ppt">10 Myths of ICT4D</a><br>-->
         Talks: <a href="toyama.html">10 Myths of ICT4D</a><br>
         Papers:
         <a href="https://ieeexplore.ieee.org/abstract/document/5426674">Design and deployment of a blood safety monitoring tool (PDF requires GT account sign-in)</a>, 
-        <a href="https://dl.acm.org/doi/pdf/10.1145/2909609.2909657" target="_blank">The C4G BLIS experience</a>, 
-        <a href="https://smartech.gatech.edu/bitstream/handle/1853/48574/Sustainability%20Failures%20of%20Rural%20Telecenters%20Challenges%20from%20the%20Sustainable%20Access%20in%20Rural%20India%20%28SARI%29%20Project.pdf?sequence=1&isAllowed=y" target="_blank">The SARI project</a>
+        <a href="https://dl.acm.org/doi/pdf/10.1145/2909609.2909657" title="Warning:click opens new tab" target="_blank">The C4G BLIS experience</a>, 
+        <a href="https://smartech.gatech.edu/bitstream/handle/1853/48574/Sustainability%20Failures%20of%20Rural%20Telecenters%20Challenges%20from%20the%20Sustainable%20Access%20in%20Rural%20India%20%28SARI%29%20Project.pdf?sequence=1&isAllowed=y" title="Warning:click opens new tab" target="_blank">The SARI project</a>
         <!--<br><br>
         <footnote><h5>* GT Proxy Tool Setup</h5></footnote>
         <small>
