Add attributes for accessibility

--- a/OMSC4G.html
+++ b/OMSC4G.html
@@ -185,6 +185,7 @@ this tool.
 			<a href="javascript:void(0);" class="icon" onclick="responseMenu()">
 				<i class="fa fa-bars"></i>
 			</a>
+			<a href="https://www.webaccessibility.com/resource-library/standard/?standard=1388" title="warning: clicking link opens new window" target="_blank"><img src="images/wcag2.1AA-blue.png" alt="Accessibility guidelines compliance logo"></a>
 		</div>      
 	</header>
 	<hr>
