--- a/studentprojects.html
+++ b/studentprojects.html
@@ -11,6 +11,7 @@ this tool.
 <!DOCTYPE html>
 <html>
 <head>
+	<title>OMSC4G</title>
     <!--<link rel="stylesheet" href="style.css">-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
@@ -180,10 +181,11 @@ this tool.
 			<a href="OMSC4G.html">Home</a>
 			<a href="studentprojects.html" class="active">Projects</a>
 			<a href="partnering.html">Partnering</a>
-			<a href="https://gatech.instructure.com/courses/221674" target="_blank">CourseLogin</a>	
+			<a href="https://gatech.instructure.com/courses/221674" title="warning: clicking link opens new window" target="_blank">CourseLogin</a>
 			<a href="javascript:void(0);" class="icon" onclick="responseMenu()">
 				<i class="fa fa-bars"></i>
 			</a>
+			<a href="https://www.webaccessibility.com/resource-library/standard/?standard=1388" title="warning: clicking link opens new window" target="_blank"><img src="images/wcag2.1AA-blue.png" alt="Accessibility guidelines compliance logo" style="height:2em;width:5em"></a>
 		</div>      
 	</header>
 	<hr>
