Add attributes for accessibility

--- a/studentprojects.html
+++ b/studentprojects.html
@@ -169,7 +169,7 @@ this tool.
 </head>
 <body>
 	<header style="margin-top:-1.0em;padding:0">
-		<img src="images/gt-logo-gold-33percent.png" align="left" style="position:relative;top:1.0em">
+		<img src="images/gt-logo-gold-33percent.png" alt="the words, Georgia Tech and a crown image, all in gold" align="left" style="position:relative;top:1.0em">
 		<section class="bannertext">
 			<h3>CS6150 Fall 2021, Computing for Social Good</h3>
 	        <h4>Professor: Santosh Vempala, <a href="mailto:vempala@gatech.edu">vempala@gatech.edu</a></h4>
