Add attributes for accessibility

--- a/studentprojects.html
+++ b/studentprojects.html
@@ -9,7 +9,7 @@ this tool.
 -->
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>OMSC4G</title>
     <!--<link rel="stylesheet" href="style.css">-->
