Add attributes for accessibility

--- a/partnering.html
+++ b/partnering.html
@@ -11,6 +11,7 @@ this tool.
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<title>OMSC4G</title>
     <!--<link rel="stylesheet" href="style.css">-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
@@ -168,7 +169,7 @@ this tool.
 </head>
 <body>
 	<header style="margin-top:-1.0em;padding:0">
-		<img src="images/gt-logo-gold-33percent.png" align="left" style="position:relative;top:1.0em">
+		<img src="images/gt-logo-gold-33percent.png" alt="the words, Georgia Tech and a crown image, all in gold" align="left" style="position:relative;top:1.0em">
 		<section class="bannertext">
 			<h3>CS6150 Fall 2021, Computing for Social Good</h3>
 	        <h4>Professor: Santosh Vempala, <a href="mailto:vempala@gatech.edu">vempala@gatech.edu</a></h4>
@@ -177,13 +178,14 @@ this tool.
         
         <!-------------  Top menu HTML----------------->
 		<div class="topnav" id="myTopnav">
-			<a href="OMSC4G.html">Home</a>
+			<a href="OMSC4G.html" class="active">Home</a>
 			<a href="studentprojects.html">Projects</a>
-			<a href="partnering.html" class="active">Partnering</a>	
-			<a href="https://gatech.instructure.com/courses/221674" target="_blank">CourseLogin</a>
+			<a href="partnering.html">Partnering</a>	
+			<a href="https://gatech.instructure.com/courses/221674" title="warning: clicking link opens new window" target="_blank">CourseLogin</a>
 			<a href="javascript:void(0);" class="icon" onclick="responseMenu()">
 				<i class="fa fa-bars"></i>
 			</a>
+			<a href="https://www.webaccessibility.com" title="warning: clicking link opens new window" target="_blank"><img src="images/wcag2.1AA-blue.png" alt="Accessibility guidelines compliance logo" style="height:2em;width:5em"></a>
 		</div>      
 	</header>
 	<hr>
