--- a/partnering.html
+++ b/partnering.html
@@ -178,9 +178,9 @@ this tool.
         
         <!-------------  Top menu HTML----------------->
 		<div class="topnav" id="myTopnav">
-			<a href="OMSC4G.html" class="active">Home</a>
+			<a href="OMSC4G.html">Home</a>
 			<a href="studentprojects.html">Projects</a>
-			<a href="partnering.html">Partnering</a>	
+			<a href="partnering.html" class="active">Partnering</a>	
 			<a href="https://gatech.instructure.com/courses/221674" title="warning: clicking link opens new window" target="_blank">CourseLogin</a>
 			<a href="javascript:void(0);" class="icon" onclick="responseMenu()">
 				<i class="fa fa-bars"></i>
