Add attributes for accessibility

--- a/partnering.html
+++ b/partnering.html
@@ -5,7 +5,7 @@ Responsive nav menu: thanks to w3schools.com
 
 NOTE: Internal style was used to facilitate viewing with the GitHub/BitBucket
 HTML preview tool. External stylesheets incur a 40 second delay in rendering with
-this tool.
+this tool
 -->
 
 <!DOCTYPE html>
