--- a/OMSC4G.html
+++ b/OMSC4G.html
@@ -164,27 +164,27 @@ this tool.
 		}
 		
 		/*---------------- iPhone Landscape --------------*/	
-		@media screen and (min-width: 377px) and (max-width:813px) and (orientation: landscape) {	
+		/*@media screen and (min-width: 377px) and (max-width:813px) and (orientation: landscape) {	
 			.topnav a:not(:first-child) {display: none;}
 			.topnav a.icon {
 				float: right;
 				display: block;
 			}
-		}
+		}*/
 		/*@media screen and (min-width: 377px) and (max-width:813px) and (orientation: landscape) {*/
-		@media only screen and (max-width: 815px) and (min-width: 378px){
+		@media only screen and (max-width: 815px) and (min-width: 378px) and (orientation: landscape){
 			.resp_logo{
-				/*position: relative;
+				position: relative;
 				padding-bottom: 1em;
-				left: 0em;*/
-				top: 1.5em;
+				left: 0em;
+				top: 0em;
 				width: 50%;
 				margin-right: 1%;
 				margin-bottom: 1em;
 			}
 			#course{
 				position: relative;
-				top: 1em;
+				top: -0.5em;
 				float: left;
 				left: -0.6em;
 				margin-bottom: 0em;
@@ -193,28 +193,26 @@ this tool.
 				position: relative;
 				left: 23em;
 				float: left;
-				top: -8em;
+				top: -10.5em;
 				margin-bottom: 0em;			
 			}
 			#dante{
 				position: relative;
-				top: -8em;
+				top: -11.2em;
 				float: left;
 				left: 0.1em;
-				margin-bottom: 2em;
+				margin-bottom: 0em;
 			}
-			.resp_image{
-				/*float: left;
-				top: -3em;*/
+			img.resp_image{
 				position: relative;
-				top: -6.7em;
+				top: -9.2em;
 				left: 23em;
 				width: 24.5%;
 				margin-bottom: -1em;
 			}
 			.topnav{
 				position: relative;
-				top: -5em;
+				top: -7.7em;
 			}
 			.topnav.responsive {position: relative;}
 			.topnav.responsive .icon {
@@ -229,17 +227,13 @@ this tool.
 			}
 			.mainsection{
 				position: relative;
-				top: -3em;
+				top: -5.7em;
 				float: left;
 			}
 		}
 		
 		/* iPad media query pixel dimensions: Thanks to: 
 		https://css-tricks.com/snippets/css/ipad-specific-css/ */
-		
-		/*---------------- iPad General ---------------
-		@media only screen and (device-width: 768px) {
-		}*/
 
 		/*---------------- iPad Portrait ---------------*/
 		@media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait) {
@@ -278,6 +272,36 @@ this tool.
 			.resp_image{
 				width: 26.8%;
 			}
+		}
+		
+		/* Pixel 2 media queries credit: 
+		https://yesviz.com/devices/google-pixel2*/
+		
+		/*---------------- Pixel2 Portrait --------------*/
+		@media only screen and (min-width: 412px) and (orientation: portrait) {
+			body{
+				width: 99vw;
+			}
+			.resp_logo{
+				width: 98%;
+			}
+			img.resp_image{
+				left: 10%;
+				width: 48%;
+			}
+			.topnav{
+				width: 100%;
+			}
+		}
+		/*---------------- Pixel2 Landscape --------------*/
+		@media only screen and (min-width: 732px) and (orientation: landscape){
+			body{
+				padding-top: 2vw;
+				width: 99vw;
+			}
+			/*.resp_image{
+				width: 26.8%;
+			}*/
 		}
     </style>
 </head>
